@@ -1,7 +1,7 @@
-== Version ?????? (tzdata v2021d) - ??????????
+== Version ?????? (tzdata v2021e) - ??????????
 
-* Updated to tzdata version 2021d
-  (https://mm.icann.org/pipermail/tz-announce/2021-October/000068.html).
+* Updated to tzdata version 2021e
+  (https://mm.icann.org/pipermail/tz-announce/2021-October/000069.html).
 
 
 == Version 0.3.60 (tzdata v2021a) - 6-Feb-2021
