@@ -1,5 +1,13 @@
 News for the tz database
 
+Release 2021e - 2021-10-21 18:41:00 -0700
+
+  Changes to future timestamps
+
+    Palestine will fall back 10-29 (not 10-30) at 01:00.
+    (Thanks to P Chan and Heba Hemad.)
+
+
 Release 2021d - 2021-10-15 13:48:18 -0700
 
   Briefly:
